--- a/src/main/resources/templates/headline.html
+++ b/src/main/resources/templates/headline.html
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col-lg-5 col-md-5 col-sm-12 col-xs-12">
                         <div class="title">
-                            <h1>Today News</h1>
+                            <h1>Today Headlines</h1>
                         </div>
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-12 col-xs-12">
